[package]
name = "beam_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beam_search"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = "0.16.2"
ndarray = "0.15.4"
crossbeam = "0.8.1"
